nie mam pomysłu na dziś

--- a/index.html
+++ b/index.html
@@ -14,22 +14,48 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 
+  <!-- fonts -->
+  <!-- Lexend Deca -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lexend+Deca:wght@400;700&display=swap" rel="stylesheet">
+
+
+
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
+  <main>
+    <img src="./images/image-header-mobile.jpg" alt="Business meeting" id="mobile-image">
+    <img src="./images/image-header-desktop.jpg" alt="Business meeting" id="desktop-image">
 
-  Get insights that help your business grow.
+    <section id="text-box">
+      <h1>Get <span>insights</span> that help your business grow.</h1>
+      <p>
+      Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      experience, and overall efficiency.
+      </p>
+      <section id="informations">
+        <div>
+          10k+ <br> <span>companies</span>
+        </div>
+        <div>
+          314 <br> <span>templates</span>
+        </div>
+        <div>
+          12M+ <br> <span>queries</span>
+        </div>
+      </section>
+  </section>
+    </main>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+  
+  <footer>
+      <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">miuoshv</a>.
+      </div>
+  </footer>
 
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
