app2 dla testów

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
 
 
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="app2.css">
 </head>
 <body>
   <main>
+    <div>
     <img src="./images/image-header-mobile.jpg" alt="Business meeting" id="mobile-image">
     <img src="./images/image-header-desktop.jpg" alt="Business meeting" id="desktop-image">
+    </div>
 
     <section id="text-box">
       <h1>Get <span>insights</span> that help your business grow.</h1>
